--- a/a.css
+++ b/a.css
@@ -259,7 +259,7 @@ nav > ul > li > a:hover {
     transition: all 0.3s;
 }
 .workPic{
-    margin:0 auto;
+    margin:0 auto 30px;
     height: 597px;
     width: 945px;
     position: relative;
