--- a/a.css
+++ b/a.css
@@ -19,46 +19,46 @@ a {
     display: block;    
     clear: both;
 }
-.logo {
-    font-size: 24px;
-    padding: 11px 4px;
-    font-family: 'Arial Black';
-}
-.rs {
-    color: #E6686A;
-    padding-right: 4px;
-}
-.card {
-    color: #9A9DA2;
-}
+
 .topDiv {
     width: 100%;
     position: fixed;
     z-index: 1;
 }
-.topNavBar {
+.topDiv > .topNavBar {
     padding: 10px 16px 10px 16px;
     transition: all 0.5s;
     color: #b7b7b7;
 }
-
-.topNavBar.sticky {
+.topDiv > .topNavBar > .logo {
+    font-size: 24px;
+    padding: 11px 4px;
+    font-family: 'Arial Black';
+}
+.topDiv > .topNavBar > .logo .rs {
+    color: #E6686A;
+    padding-right: 4px;
+}
+.topDiv > .topNavBar > .logo .card {
+    color: #9A9DA2;
+}
+.topDiv > .topNavBar.sticky {
     background: white;
     color: #3d4451;
     padding: 3px 16px 3px 16px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-nav > ul {
+.topDiv > .topNavBar > nav > ul {
     padding: 19px 10px;
 }
-nav > ul > li {
+.topDiv > .topNavBar > nav > ul > li {
     float: left; 
     display: block;
     position: relative;
     margin-left: 16px;
     margin-right: 16px;
 }
-nav > ul > li > a {
+.topDiv > .topNavBar > nav > ul > li > a {
     color: inherit;
     font-size: 12px;
     font-weight: bold;
@@ -68,7 +68,8 @@ nav > ul > li > a {
     padding-top: 5px;
     position: relative;
 }
-nav > ul > li.active > a::after {
+.topDiv > .topNavBar > nav > ul > li.active > a::after, 
+.topDiv > .topNavBar > nav > ul > li.highLight > a::after{
     content: '';
     display: block;
     position: absolute;
@@ -87,19 +88,19 @@ nav > ul > li.active > a::after {
         width: 100%;
     }
 }
-.submenu{
+.topDiv > .topNavBar > nav .submenu{
     display: none;
     position: absolute;
     right: 0;
     margin-top: 7px; 
     top: 100%;
 }
-.submenu > li{
+.topDiv > .topNavBar > nav .submenu > li{
     white-space: nowrap;
     display: inline-block;
     padding: 5px 10px;
 }
-.topDiv li.active >.submenu{
+.topDiv > .topNavBar li.active >.submenu{
     list-style: none;
     display: block;
     background: white;
@@ -125,27 +126,7 @@ nav > ul > li.active > a::after {
     background-color: rgba(0, 0, 0, 0.8);
     height: 515px;
 }
-.avatar {
-    padding:50px 0px 0px 50px;
-    float: left;
-}
-
-.logoHello {
-    background: #E6686A;
-    color: white;
-    width: 40px;
-    padding: 4px 15px;
-    margin-top: 50px;
-}
-.triangle {
-    border: 5px transparent solid;
-    width: 0px;
-    height: 0px;
-    margin-left: 10px; 
-    border-top-color: #E6686A;
-    border-left-color: #E6686A;
-}
-.mesCard {
+main .mesCard {
     background-color: white;
     max-width: 940px;
     margin-left: auto;
@@ -153,45 +134,63 @@ nav > ul > li.active > a::after {
     margin-top: -345px;
     box-shadow: 0px 1px 10px 1px rgba(168,168,168,0.8);
 }
-.message {
+main .mesCard .avatar {
+    padding:50px 0px 0px 50px;
+    float: left;
+}
+main .mesCard .message {
     float: left;
     padding-left: 65px;
     width: 470px;
 }
-.message h1 {
+main .mesCard .message .logoHello {
+    background: #E6686A;
+    color: white;
+    width: 40px;
+    padding: 4px 15px;
+    margin-top: 50px;
+}
+main .mesCard .message .triangle {
+    border: 5px transparent solid;
+    width: 0px;
+    height: 0px;
+    margin-left: 10px; 
+    border-top-color: #E6686A;
+    border-left-color: #E6686A;
+}
+main .mesCard .message h1 {
     padding-top: 27px;
     margin-bottom: 8px;
 }
-
-.message hr {
+main .mesCard .message hr {
     margin: 22px 0px 28px 0px;
 }
-.message dl dt {
+main .mesCard .message dl dt {
     float: left;
     width: 30%;
     font-weight: bold;
     padding: 7px 0px;
 }
-.message dl dd {
+main .mesCard .message dl dd {
     float: left;
     width: 70%;
     margin: 0px;
     padding: 7px 0px;
     color: #9da0a7;
 }
-.mesCard footer{
+main .mesCard footer{
     margin-top: 40px;
     padding: 7px 0px;
     background-color: #E6686A;
     text-align: center;
 }
-.mesCard svg {
+main .mesCard svg {
     width: 30px;
     height: 30px; 
     fill: white;
     vertical-align: top;
 }
-.mesCard > footer > a {
+main .mesCard > footer > a {
     display: inline-block;
     width: 40px;
     line-height: 30px;
@@ -199,14 +198,14 @@ nav > ul > li.active > a::after {
     border-radius: 50%;
     margin: 16px 32px;
   }
-.mesCard > footer > a:hover {
+main .mesCard > footer > a:hover {
     background-color: #CF5D5F;
 }
 
-.pdf{
+main .pdf{
     text-align: center;   
 }
-.dPdf{
+main .dPdf{
     font-size: 14px;
     color: #3d4451;
     line-height: 16px;
@@ -218,26 +217,26 @@ nav > ul > li.active > a::after {
     border: 1px solid #CDCFD1;
     transition: box-shadow 0.2s;
 }
-.dPdf:hover{
+main .dPdf:hover{
     box-shadow: 0px 7px 20px -4px rgba(158,158,158,1);
 }
-.introduction{
+main .introduction{
     text-align: center;
     font-size: 18px;
     padding-top: 4px;
 }
 
-.skillSection{
+section.skillSection{
     margin-top: 60px;
 }
 
-.skills{
+section.skillSection .skills{
     text-align: center;
     font-size: 35px;
     font-weight: 600;
     color: #3d4451;
 }
-.skillList{
+section.skillSection .skillList{
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
@@ -248,87 +247,99 @@ nav > ul > li.active > a::after {
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
     font-size: 12px;
 }
-.skillList > li {
+section.skillSection .skillList > li {
     box-sizing: border-box;
     width: 48%;
 }
-
-.progressBar{
+section.skillSection .progressBar{
     height: 6px;
     border-radius: 2px;
     background-color: #FAE1E1;
     margin: 4px 0px 40px 0px;
+    overflow: hidden;
 }
-.progress{
+section.skillSection .progressBar > .progress{
     height: 6px;
     border-radius: 2px;
     background-color: #E6686A;
+    transform: translateX(0);
+    transition: all 1s;
+}
+section.skillSection.offset .progress{
+    transform: translateX(-100%);
 }
 
-.skillList > li:nth-child(odd){
+section.skillSection .skillList > li:nth-child(odd){
     float: left;
 }
-.skillList > li:nth-child(even){
+section.skillSection .skillList > li:nth-child(even){
     float: right;
 }
-.workSection {
+section.workSection {
     margin-top: 60px;
 }
-.works{
+section.workSection .works{
     text-align: center;
     font-size: 35px;
     font-weight: 600;
     color: #3d4451;
 }
-.workSection > nav{
+section.workSection > nav{
     width: 235px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 32px
 }
-.workList{
+section.workSection .workList{
     list-style: none;
 }
-.workList > li{
+section.workSection .workList > li{
     float: left;
     padding-left: 40px;
     cursor: pointer;
 }
-.workList >  li:first-child{
+section.workSection .workList >  li:first-child{
     padding-left: 0px;
 }
-.bar{
+section.workSection > nav > .bar{
     width: 235px;
     height: 6px;
     border-radius: 2px;
     background-color: white;
     margin: 7px auto 28px;
 }
-.bar-inner{
+section.workSection > nav .bar .bar-inner{
     height: 6px;
     border-radius: 2px;
     background-color: #E6686A;
     transition: all 0.3s;
 }
-.workPic{
+section.workSection .workPic{
     margin:0 auto;
     padding-bottom: 30px;
     height: 597px;
     width: 945px;
     position: relative;
 }
-.workPic > div{
+section.workSection .workPic > div{
     position: absolute;
 }
-.bar.state-1 .bar-inner{
+section.workSection > nav .bar.state-1 .bar-inner{
     margin-left: 0;
     width: 50px;
 }
-.bar.state-2 .bar-inner{
+section.workSection > nav .bar.state-2 .bar-inner{
     margin-left: 65px;
     width: 50px;
 }
-.bar.state-3 .bar-inner{
+section.workSection > nav .bar.state-3 .bar-inner{
     margin-left: 140px;
     width: 96px;
+}
+[data-x].offset{
+    transform: translateY(60px);
+}
+[data-x]{
+    transform: translateY(0);
+    transition: all 0.5s;
 }
