--- a/a.css
+++ b/a.css
@@ -1,345 +1,66 @@
-body {
-    background-color: #EFEFEF;
-    color: black;
-}
-* {
-    margin: 0;
-    padding: 0;
-}
-h1,h2,h3,h4{
-    font-weight: normal;
-
-}
-a {
-    text-decoration: none;
-    color: inherit;
-}
-.clearfix::after{    
-    content: '';    
-    display: block;    
-    clear: both;
-}
-
-.topDiv {
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-}
-.topDiv > .topNavBar {
-    padding: 10px 16px 10px 16px;
-    transition: all 0.5s;
-    color: #b7b7b7;
-}
-.topDiv > .topNavBar > .logo {
-    font-size: 24px;
-    padding: 11px 4px;
-    font-family: 'Arial Black';
-}
-.topDiv > .topNavBar > .logo .rs {
-    color: #E6686A;
-    padding-right: 4px;
-}
-.topDiv > .topNavBar > .logo .card {
-    color: #9A9DA2;
-}
-.topDiv > .topNavBar.sticky {
-    background: white;
-    color: #3d4451;
-    padding: 3px 16px 3px 16px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.topDiv > .topNavBar > nav > ul {
-    padding: 19px 10px;
-}
-.topDiv > .topNavBar > nav > ul > li {
-    float: left; 
-    display: block;
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-}
-.topDiv > .topNavBar > nav > ul > li > a {
-    color: inherit;
-    font-size: 12px;
-    font-weight: bold;
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    position: relative;
-}
-.topDiv > .topNavBar > nav > ul > li.active > a::after, 
-.topDiv > .topNavBar > nav > ul > li.highLight > a::after{
-    content: '';
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: #e06567;
-    height: 3px;
-    animation: menuSlide 0.3s;
-}
-@keyframes menuSlide{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 100%;
-    }
-}
-.topDiv > .topNavBar > nav .submenu{
-    display: none;
-    position: absolute;
-    right: 0;
-    margin-top: 7px; 
-    top: 100%;
-}
-.topDiv > .topNavBar > nav .submenu > li{
-    white-space: nowrap;
-    display: inline-block;
-    padding: 5px 10px;
-}
-.topDiv > .topNavBar li.active >.submenu{
-    list-style: none;
-    display: block;
-    background: white;
-    color: #3d4451;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    animation: submenuSlide 0.3s;
-}
-@keyframes submenuSlide{
-    0%{
-        margin-right: 100%; 
-    }
-    100%{
-        margin-right: 0%;
-    }
-}
-.bgPhoto {
-    height: 515px;
-    background-image: url(./img/rs-cover.jpg);
-    background-position: center center;
-    background-size: cover;
-}
-.bgPhoto .bgColor {
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 515px;
-}
-main .mesCard {
-    background-color: white;
-    max-width: 940px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -345px;
-    box-shadow: 0px 1px 10px 1px rgba(168,168,168,0.8);
-}
-main .mesCard .avatar {
-    padding:50px 0px 0px 50px;
-    float: left;
-}
-main .mesCard .message {
-    float: left;
-    padding-left: 65px;
-    width: 470px;
-}
-main .mesCard .message .logoHello {
-    background: #E6686A;
-    color: white;
-    width: 40px;
-    padding: 4px 15px;
-    margin-top: 50px;
-}
-main .mesCard .message .triangle {
-    border: 5px transparent solid;
-    width: 0px;
-    height: 0px;
-    margin-left: 10px; 
-    border-top-color: #E6686A;
-    border-left-color: #E6686A;
-}
-main .mesCard .message h1 {
-    padding-top: 27px;
-    margin-bottom: 8px;
-}
-main .mesCard .message hr {
-    margin: 22px 0px 28px 0px;
-}
-main .mesCard .message dl dt {
-    float: left;
-    width: 30%;
-    font-weight: bold;
-    padding: 7px 0px;
-}
-main .mesCard .message dl dd {
-    float: left;
-    width: 70%;
-    margin: 0px;
-    padding: 7px 0px;
-    color: #9da0a7;
-}
-main .mesCard footer{
-    margin-top: 40px;
-    padding: 7px 0px;
-    background-color: #E6686A;
-    text-align: center;
-}
-main .mesCard svg {
-    width: 30px;
-    height: 30px; 
-    fill: white;
-    vertical-align: top;
-}
-main .mesCard > footer > a {
-    display: inline-block;
-    width: 40px;
-    line-height: 30px;
-    padding: 5px 0;
-    border-radius: 50%;
-    margin: 16px 32px;
-  }
-main .mesCard > footer > a:hover {
-    background-color: #CF5D5F;
-}
-
-main .pdf{
-    text-align: center;   
-}
-main .dPdf{
-    font-size: 14px;
-    color: #3d4451;
-    line-height: 16px;
-    padding: 22px 55px;
-    display: inline-block;
-    border-radius: 5px;
-    margin: 30px 0;
-    font-weight: bold;
-    border: 1px solid #CDCFD1;
-    transition: box-shadow 0.2s;
-}
-main .dPdf:hover{
-    box-shadow: 0px 7px 20px -4px rgba(158,158,158,1);
-}
-main .introduction{
-    text-align: center;
-    font-size: 18px;
-    padding-top: 4px;
-}
-
-section.skillSection{
-    margin-top: 60px;
-}
-
-section.skillSection .skills{
-    text-align: center;
-    font-size: 35px;
-    font-weight: 600;
-    color: #3d4451;
-}
-section.skillSection .skillList{
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 840px;
-    background-color: white;
-    list-style: none;
-    padding: 40px 50px 0;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
-    font-size: 12px;
-}
-section.skillSection .skillList > li {
-    box-sizing: border-box;
-    width: 48%;
-}
-section.skillSection .progressBar{
-    height: 6px;
-    border-radius: 2px;
-    background-color: #FAE1E1;
-    margin: 4px 0px 40px 0px;
-    overflow: hidden;
-}
-section.skillSection .progressBar > .progress{
-    height: 6px;
-    border-radius: 2px;
-    background-color: #E6686A;
-    transform: translateX(0);
-    transition: all 1s;
-}
-section.skillSection.offset .progress{
-    transform: translateX(-100%);
-}
-
-section.skillSection .skillList > li:nth-child(odd){
-    float: left;
-}
-section.skillSection .skillList > li:nth-child(even){
-    float: right;
-}
-section.workSection {
-    margin-top: 60px;
-}
-section.workSection .works{
-    text-align: center;
-    font-size: 35px;
-    font-weight: 600;
-    color: #3d4451;
-}
-section.workSection > nav{
-    width: 235px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 32px
-}
-section.workSection .workList{
-    list-style: none;
-}
-section.workSection .workList > li{
-    float: left;
-    padding-left: 40px;
-    cursor: pointer;
-}
-section.workSection .workList >  li:first-child{
-    padding-left: 0px;
-}
-section.workSection > nav > .bar{
-    width: 235px;
-    height: 6px;
-    border-radius: 2px;
-    background-color: white;
-    margin: 7px auto 28px;
-}
-section.workSection > nav .bar .bar-inner{
-    height: 6px;
-    border-radius: 2px;
-    background-color: #E6686A;
-    transition: all 0.3s;
-}
-section.workSection .workPic{
-    margin:0 auto;
-    padding-bottom: 30px;
-    height: 597px;
-    width: 945px;
-    position: relative;
-}
-section.workSection .workPic > div{
-    position: absolute;
-}
-section.workSection > nav .bar.state-1 .bar-inner{
-    margin-left: 0;
-    width: 50px;
-}
-section.workSection > nav .bar.state-2 .bar-inner{
-    margin-left: 65px;
-    width: 50px;
-}
-section.workSection > nav .bar.state-3 .bar-inner{
-    margin-left: 140px;
-    width: 96px;
-}
-[data-x].offset{
-    transform: translateY(60px);
-}
-[data-x]{
-    transform: translateY(0);
-    transition: all 0.5s;
-}
+body {background-color: #EFEFEF;color: black;}
+* {margin: 0;padding: 0;}
+h1,h2,h3,h4 {font-weight: normal;}
+a {text-decoration: none;color: inherit;}
+.clearfix::after {content: '';display: block;clear: both;}
+.icon {width: 1em;height: 1em;vertical-align: -0.15em;fill: currentColor;overflow: hidden;}
+.site-welcome {display: none;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: #888;z-index: 1;justify-content: center;align-items: center;}
+.site-welcome.active {display: flex;}
+.loading {width: 200px;height: 200px;position: relative;}
+.loading::before,
+.loading::after {content: '';position: absolute;background: black;width: 0;height: 0;top: 0;bottom: 0;left: 0;right: 0;margin: auto;border-radius: 50%;animation: s 1.2s linear infinite;}
+.loading::after {animation-delay: 0.6s;}
+@keyframes s {0% {width: 0;height: 0;opacity: 0.7;}100% {width: 100px;height: 100px;opacity: 0;}}
+.topDiv {width: 100%;position: fixed;z-index: 1;}
+.topDiv>.topNavBar {padding: 10px 16px 10px 16px;transition: all 0.5s;color: #b7b7b7;}
+.topDiv>.topNavBar>.logo {font-size: 24px;padding: 11px 4px;font-family: 'Arial Black';}
+.topDiv>.topNavBar>.logo .rs {color: #E6686A;padding-right: 4px;}
+.topDiv>.topNavBar>.logo .card {color: #9A9DA2;}
+.topDiv>.topNavBar.sticky {background: white;color: #3d4451;padding: 3px 16px 3px 16px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);}
+.topDiv>.topNavBar>nav>ul {padding: 19px 10px;}
+.topDiv>.topNavBar>nav>ul>li {float: left;display: block;position: relative;margin-left: 16px;margin-right: 16px;}
+.topDiv>.topNavBar>nav>ul>li>a {color: inherit;font-size: 12px;font-weight: bold;border-top: 3px solid transparent;border-bottom: 3px solid transparent;padding-bottom: 5px;padding-top: 5px;position: relative;}
+.topDiv>.topNavBar>nav>ul>li.active>a::after,
+.topDiv>.topNavBar>nav>ul>li.highLight>a::after {content: '';display: block;position: absolute;top: 100%;left: 0;width: 100%;background: #e06567;height: 3px;animation: menuSlide 0.3s;}
+@keyframes menuSlide {0% {width: 0%;}100% {width: 100%;}}
+.topDiv>.topNavBar>nav .submenu {display: none;position: absolute;right: 0;margin-top: 7px;top: 100%;}
+.topDiv>.topNavBar>nav .submenu>li {white-space: nowrap;display: inline-block;padding: 5px 10px;}
+.topDiv>.topNavBar li.active>.submenu {list-style: none;display: block;background: white;color: #3d4451;box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);animation: submenuSlide 0.3s;}
+@keyframes submenuSlide {0% {margin-right: 100%;}100% {margin-right: 0%;}}
+.bgPhoto {height: 515px;background-image: url(./img/rs-cover.jpg);background-position: center center;background-size: cover;}
+.bgPhoto .bgColor {background-color: rgba(0, 0, 0, 0.8);height: 515px;}
+main .mesCard {background-color: white;max-width: 940px;margin-left: auto;margin-right: auto;margin-top: -345px;box-shadow: 0px 1px 10px 1px rgba(168, 168, 168, 0.8);}
+main .mesCard .avatar {padding: 50px 0px 0px 50px;float: left;}
+main .mesCard .message {float: left;padding-left: 65px;width: 470px;}
+main .mesCard .message .logoHello {background: #E6686A;color: white;width: 40px;padding: 4px 15px;margin-top: 50px;}
+main .mesCard .message .triangle {border: 5px transparent solid;width: 0px;height: 0px;margin-left: 10px;border-top-color: #E6686A;border-left-color: #E6686A;}
+main .mesCard .message h1 {padding-top: 27px;margin-bottom: 8px;}
+main .mesCard .message hr {margin: 22px 0px 28px 0px;}
+main .mesCard .message dl dt {float: left;width: 30%;font-weight: bold;padding: 7px 0px;}
+main .mesCard .message dl dd {float: left;width: 70%;margin: 0px;padding: 7px 0px;color: #9da0a7;}
+main .mesCard footer {margin-top: 40px;padding: 7px 0px;background-color: #E6686A;text-align: center;}
+main .mesCard svg {width: 30px;height: 30px;fill: white;vertical-align: top;}
+main .mesCard>footer>a {display: inline-block;width: 40px;line-height: 30px;padding: 5px 0;border-radius: 50%;margin: 16px 32px;}
+main .mesCard>footer>a:hover {background-color: #CF5D5F;}
+main .pdf {text-align: center;}
+main .dPdf {font-size: 14px;color: #3d4451;line-height: 16px;padding: 22px 55px;display: inline-block;border-radius: 5px;margin: 30px 0;font-weight: bold;border: 1px solid #CDCFD1;transition: box-shadow 0.2s;}
+main .dPdf:hover {box-shadow: 0px 7px 20px -4px rgba(158, 158, 158, 1);}
+main .introduction {text-align: center;font-size: 18px;padding-top: 4px;}
+section.skillSection {margin-top: 60px;}
+section.skillSection .skills {text-align: center;font-size: 35px;font-weight: 600;color: #3d4451;}
+section.skillSection .skillList {margin-top: 30px;margin-left: auto;margin-right: auto;max-width: 840px;background-color: white;list-style: none;padding: 40px 50px 0;box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);font-size: 12px;}
+section.skillSection .skillList>li {box-sizing: border-box;width: 48%;}
+section.skillSection .progressBar {height: 6px;border-radius: 2px;background-color: #FAE1E1;margin: 4px 0px 40px 0px;overflow: hidden;}
+section.skillSection .progressBar>.progress {height: 6px;border-radius: 2px;background-color: #E6686A;transform: translateX(0);transition: all 1s;}
+section.skillSection.offset .progress {transform: translateX(-100%);}
+section.skillSection .skillList>li:nth-child(odd) {float: left;}
+section.skillSection .skillList>li:nth-child(even) {float: right;}
+section.workSection {margin: 60px 0px 160px 0px}
+section.workSection .works {text-align: center;font-size: 35px;font-weight: 600;color: #3d4451;}
+section.workSection .workPic {margin: 30px auto 0px;max-width: 720px;position: relative;}
+section.workSection .workPic>.swiper-container {width: 668px;height: 501px;}
+section.workSection .workPic>.swiper-button-prev,
+section.workSection .workPic>.swiper-button-next{background-color: white;width: 64px;height: 64px;right: 100%;left: auto;border-radius: 50%;}
+section.workSection .workPic>.swiper-button-next{left: 100%;right: auto;}
+[data-x].offset {transform: translateY(60px);}
+[data-x] {transform: translateY(0);transition: all 0.5s;}
